--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <footer>
-      <p>
+      <p class="made-by">Made with <3 by Shayan Abedi</p>
+      <p class="api">
         API:
         <a href="https://covid19.mathdro.id/api"
           >https://covid19.mathdro.id/api</a
         >
       </p>
-      <p>&copy; Shayan Abedi</p>
+      <small>&copy; COVID-19 Tracker 2020.</small>
     </footer>
   </body>
 </html>
