fix the p tag error

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <footer>
-      <p class="made-by">Made with <3 by Shayan Abedi</p>
+      <p class="made-by">Made with <3 by Shayan Abedi></p>
       <p class="api">
         API:
         <a href="https://covid19.mathdro.id/api"
